--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -2,6 +2,13 @@
 @import "./variables";
 @import "./petList";
 
+/* COMMONS */
+.hide{display:none;}
+.invisible{
+  visibility: hidden;
+  opacity:0;
+}
+
 /* LINKS */
 a{
   color: $theme-link-color;
