--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -76,5 +76,107 @@ main{
   padding: 1em; //1em ($sidebar-padding / 2);
 }
 
+//MODAL
+.modal{
+  visibility: hidden;
+  opacity: 0;
+  position: fixed;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.8);
+  z-index: 2000;
+  transition:visibility 0.2s, opacity 0.2s;
 
-//
+  &.open{
+    visibility: visible;
+    opacity: 1;
+  }
+
+  //modal content
+  .modal-content{
+    width: 80%;
+    height:100vh;
+    overflow:auto;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    padding: 1em 2em;
+    background-color: #fff;
+
+    h2{
+      display: block;
+      text-align: center;
+      margin-bottom: 3em;
+    }
+  }
+
+  //modal close button
+  button.modal-btn-close{
+    display:block;
+    padding:0.3em 1.2em;
+    margin:0 0.1em 0.1em 0;
+    border:0.16em solid rgba(255,255,255,0);
+    border-radius:2em;
+    box-sizing: border-box;
+    text-decoration:none;
+    font-weight:300;
+    color:#FFFFFF;
+    text-shadow: 0 0.04em 0.04em rgba(0,0,0,0.35);
+    text-align:center;
+    transition: all 0.2s;
+    background-color: #f14e4e;
+    margin-left: auto; //float right
+  
+    &:hover{
+     border-color: rgba(255,255,255,1);
+    }
+  }
+}
+
+//INPUTS
+form{
+  width:50%;
+  margin:0px auto;
+
+  input[type=text]{
+    width:100%;
+    padding: .5em .6em;
+    display: inline-block;
+    border: 1px solid #ccc;
+    box-shadow: inset 0 1px 3px #ddd;
+    border-radius: 4px;
+    vertical-align: middle;
+    box-sizing: border-box;
+    margin-bottom: 1em;
+  }
+  label{
+    width:100%;
+    display:block;
+    padding: 0.5em 0;
+  }
+
+  input[type=submit]{
+    cursor: pointer;
+    display: block;
+    padding: 0.7em 1.4em;
+    margin: 0 0.3em 0.3em 0;
+    border-radius: 0.15em;
+    text-decoration: none;
+    font-family: 'Roboto',sans-serif;
+    text-transform: uppercase;
+    color: #FFFFFF;
+    background-color: #2fc448;
+    box-shadow: inset 0 -0.6em 0 -0.35em rgba(0,0,0,0.17);
+    text-align: center;
+    position: relative;
+    border:0;
+    
+    &:active{
+      top:0.1em;
+    }
+  }
+}
