--- a/src/components/modal/ownerPets/ownerPets.scss
+++ b/src/components/modal/ownerPets/ownerPets.scss
@@ -1,30 +1,11 @@
-//owner pets displayed in a modal
+//OWNER PETS
 
-#owner-pets-modal{
-  visibility: hidden;
-  opacity: 0;
-  position: fixed;
-  left: 0;
-  right: 0;
-  top: 0;
-  bottom: 0;
-  background-color: rgba(0, 0, 0, 0.8);
-  z-index: 2000;
-  transition:visibility 0.2s, opacity 0.2s;
-
-  &.open{
-    visibility: visible;
-    opacity: 1;
-  }
-}
-
-#owner-pets-modal-content{
+#owner-pets > section:not(:last-of-type){
   //spacing between sections (cats/dogs list)
-  >section:not(:last-of-type){
-    margin-bottom: 4em;
-  }
+  margin-bottom: 4em;
 }
 
+//owner id
 small#owner-pets-person-id{
   display:block;
   font-size:80%;
