--- a/src/components/owners/owners.scss
+++ b/src/components/owners/owners.scss
@@ -7,15 +7,15 @@
 	//align-items: center;
 	width: 100%;
 	justify-content: flex-start;
-	overflow-x: hidden;
-  overflow-y: auto;
+	//overflow-x: hidden;
+  //overflow-y: auto;
   flex-wrap: wrap;
 }
 //each owner item
 #owner-list > li{
   padding: 0.5em;
   width: $pagearea-box-width;
-  margin-bottom: 1em;
+  margin-bottom: 1.5em;
   
   //actual box
   >div{
@@ -28,11 +28,51 @@
     &.dragOver{
       border:1px solid green;
     }
+
+    //show buttons on hover
+    &:hover{
+      .owner-buttons{
+        visibility:visible;
+        opacity:1;
+        transition:visibility 0.2s linear, opacity 0.2s linear;
+      }
+    }
   }
 
   //spacing between each div section of the owner
   >div > div:not(:first-of-type){
     margin-top: 1.5em;
+  }
+
+  //control buttons show on hover
+  .owner-buttons{
+    position: absolute;
+    top: -2.2em;
+    right: 0;
+
+    button{
+      font-size: 100%;
+      height: 2em;
+      width: 2em;
+      border-radius: 3px;
+      border:1px solid rgb(95, 95, 95);
+      margin-right: 1em;
+      padding: 0.2em;
+      &:last-child{margin-right: 0;}
+
+      &.info{
+        background: #fff url("../../assets/images/info.svg") no-repeat center;
+        background-size: 80%;
+      }
+      &.rename{
+        background: #fff url("../../assets/images/edit.svg") no-repeat center;
+        background-size: 80%;
+      }
+      &.delete{
+        background: #fff url("../../assets/images/delete.svg") no-repeat center;
+        background-size: 80%;
+      }
+    }
   }
 
   //top property title (header)
