--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -78,3 +78,11 @@ main{
   padding: 1em; //1em ($sidebar-padding / 2);
 }
 
+//LOADING OVERLAY OVER-RIDE
+.loadingOverlayCustom{
+  position: initial !important;
+
+  >div{
+    z-index: 3;
+  }
+}
