--- a/src/components/owners/owners.scss
+++ b/src/components/owners/owners.scss
@@ -47,8 +47,9 @@
   //control buttons show on hover
   .owner-buttons{
     position: absolute;
-    top: -2.2em;
-    right: 0;
+    top: 0.5em;
+    left: 50%;
+    transform: translate(-50%);
 
     button{
       font-size: 100%;
